--- a/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
@@ -20,24 +20,20 @@
                             <div>SKU: @Model.Product.SKUCode</div>
                             @if (Model.Product.ProductManufacturer != null)
                             {
-                            <div>Brand: <a href="@Url.Action("List", "Products", new { values = "BrandS-" +  @Model.Product.ProductManufacturer.Name.Replace(" ", "_") })">@Model.Product.ProductManufacturer.Name</a></div>
+                                <div>Brand: <a href="@Url.Action("List", "Products", new { values = "BrandS-" +  @Model.Product.ProductManufacturer.Name.Replace(" ", "_") })">@Model.Product.ProductManufacturer.Name</a></div>
                             }
                             @if (!string.IsNullOrEmpty(Model.Product.ManufacturerPartNo?.Trim()))
                             {
-                            <div>MFP No: @Model.Product.ManufacturerPartNo</div>
+                                <div>MFP No: @Model.Product.ManufacturerPartNo</div>
                             }
-                            <div class="availibility">
-                                @{ var availableProductCount = Ganedata.Core.Services.Inventory.GetAvailableProductCount(Model.Product, ViewBag.SiteId);
-                                    ViewBag.AvailableProductCount = availableProductCount;
-                                }
-                                @if (availableProductCount > 0)
-                                {
-                                    <span>@((int)availableProductCount) In Stock</span>
-                                }
-                                else
-                                {
-                                    <span>Currently unavailable.</span>
-                                }
+                            @{
+                                ViewBag.AvailableProductCount = Model.AvailableProductCount;
+                            }
+                            @Html.Partial("_ProductAvailability", Model.Product)
+                            <div class="get-trade-price__link" style="display: none;">
+                                <a href="javascript:;" onclick="GetLoggedIn(false,true)">
+                                    Get Trade Price
+                                </a>
                             </div>
                         </div>
                         <div class="col-md-12 col-lg-12 col-xl-8">
@@ -99,3 +95,11 @@
 </section>
 
 @Html.Partial("_RelatedProducts", Model.RelatedProducts)
+
+<script>
+    $(function () {
+        if (userStatus === "Login") {
+            $(".get-trade-price__link").show();
+        }
+    });
+</script>
