--- a/WarehouseEcommerce/Content/Theme/University/app/css/app.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app.css
@@ -2334,7 +2334,12 @@ input[type=number]::-webkit-outer-spin-button {
             color: #000;
             margin-top: 20px;
             margin-bottom: 0px;
-            text-transform: uppercase
+            text-transform: uppercase;
+            white-space: nowrap
+        }
+
+        .product-unavailable-text {
+            color: gray !important;
         }
 
         .nb_prd_det_rightsec .sizeWrap {
