--- a/WMS/Views/Theme/Modern/MarketJob/_CreateEdit.cshtml
+++ b/WMS/Views/Theme/Modern/MarketJob/_CreateEdit.cshtml
@@ -60,7 +60,7 @@
         </div>
         <div class="col-md-offset-2 col-md-10 bottom-right">
             <input type="submit" class="btn btn-primary" id="saveBtn_MarketJobs" value="Save" />
-            <a type="button" class="btn btn-default" href="@Url.Action("MarketJobs","Markets")">Back to List</a>
+            <a type="button" class="btn btn-default" href="@Url.Action("Index","MarketJob")">Back to List</a>
         </div>
     </form>
 </div>
