--- a/WMS/Views/Theme/Default/MarketsVehicle/_GridPartial.cshtml
+++ b/WMS/Views/Theme/Default/MarketsVehicle/_GridPartial.cshtml
@@ -4,7 +4,7 @@
     settings =>
     {
         settings.Name = "gridMaster";
-        settings.CallbackRouteValues = new { Controller = "Markets", Action = "MarketsVehicleListPartial" };
+        settings.CallbackRouteValues = new { Controller = "MarketsVehicle", Action = "MarketsVehicleListPartial" };
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
 
         settings.Settings.ShowHeaderFilterButton = false;
@@ -32,8 +32,8 @@
             column.SetDataItemTemplateContent(m =>
             {
                 var id = (int)DataBinder.Eval(m.DataItem, "Id");
-                ViewContext.Writer.Write("<form class='form-horizontal' id='_deleteRoute'>" + Html.AntiForgeryToken() + "<a class='btn fa fa-pencil' href='/markets/VehiclesEdit/" + id + "' role='button'></a>" +
-                                         "<a class='btn  fa fa-trash' role='button' data-valueid='" + id + "' data-action='DeleteVehicle' data-controller='Markets' id='deleteBtn' data-title='Delete Vehicle' data-message='This cannot be reversed, are you sure you want to delete this Vehicle?' data-toggle='modal' data-target='#confirm-delete'></a><a title='Vehicle Inspection' class='btn fa fa-tasks' href='/vehicleinspection/edit/0/" + id + "' role='button'><b class='fa fa-share'></b></a></form>");
+                ViewContext.Writer.Write("<form class='form-horizontal' id='_deleteRoute'>" + Html.AntiForgeryToken() + "<a class='btn fa fa-pencil' href='/MarketsVehicle/Edit/" + id + "' role='button'></a>" +
+                                         "<a class='btn  fa fa-trash' role='button' data-valueid='" + id + "' data-action='DeleteVehicle' data-controller='MarketsVehicle' id='deleteBtn' data-title='Delete Vehicle' data-message='This cannot be reversed, are you sure you want to delete this Vehicle?' data-toggle='modal' data-target='#confirm-delete'></a><a title='Vehicle Inspection' class='btn fa fa-tasks' href='/vehicleinspection/edit/0/" + id + "' role='button'><b class='fa fa-share'></b></a></form>");
             });
         });
 
