--- a/WMS/Views/Theme/Default/SalesOrders/_Consignments.cshtml
+++ b/WMS/Views/Theme/Default/SalesOrders/_Consignments.cshtml
@@ -4,7 +4,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings =>
     {
-        settings.Name = "consignmentgridview"+ ViewBag.productId;
+        settings.Name = "consignmentgridview" + ViewBag.productId;
         settings.CallbackRouteValues = new { Controller = "SalesOrders", Action = "_Consignments" };
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
 
@@ -97,8 +97,8 @@
                     var status = DataBinder.Eval(m.DataItem, "status");
                     if (status != null)
                     {
-                        var OrderProcessStatusId = (OrderProcessStatusEnum)DataBinder.Eval(m.DataItem, "status");
-                        ViewContext.Writer.Write(OrderProcessStatusId);
+                        var orderProcessStatusId = (OrderProcessStatusEnum)DataBinder.Eval(m.DataItem, "status");
+                        ViewContext.Writer.Write(orderProcessStatusId);
                     }
                 });
             });
@@ -112,20 +112,20 @@
             column.SetDataItemTemplateContent(m =>
             {
                 var id = (int)DataBinder.Eval(m.DataItem, "OrderProcessID");
-                int? orderstatus=(int?)DataBinder.Eval(m.DataItem, "orderstatus");
+                var orderStatus = (OrderStatusEnum?)DataBinder.Eval(m.DataItem, "orderstatus");
 
-                int? OrderProcessStatusId = (int?)DataBinder.Eval(m.DataItem, "status");
-                if (OrderProcessStatusId.HasValue)
+                var orderProcessStatusId = (OrderProcessStatusEnum?)DataBinder.Eval(m.DataItem, "status");
+                if (orderProcessStatusId.HasValue)
                 {
-                    if (OrderProcessStatusId == (int)OrderProcessStatusEnum.Dispatched)
+                    if (orderProcessStatusId == OrderProcessStatusEnum.Dispatched)
                     {
                         ViewContext.Writer.Write("<a target='_blank' data-orderid=" + id + " data-statusid = '2' data-type = 'CO' alt='Mark delivery as completed' class='make-order-active btn fa fa-arrow-left pull-left'></a>");
 
 
                     }
 
-                    if (OrderProcessStatusId != (int)OrderProcessStatusEnum.Active && (orderstatus.HasValue && (OrderStatusEnum)orderstatus != OrderStatusEnum.BeingPicked
-                    && (OrderStatusEnum)orderstatus != OrderStatusEnum.Hold && (OrderStatusEnum)orderstatus != OrderStatusEnum.Active))
+                    if (orderProcessStatusId != OrderProcessStatusEnum.Active && (orderStatus.HasValue && (OrderStatusEnum)orderStatus != OrderStatusEnum.BeingPicked
+                    && (OrderStatusEnum)orderStatus != OrderStatusEnum.Hold && (OrderStatusEnum)orderStatus != OrderStatusEnum.Active))
                     {
                         var functon = string.Format("CustomEmails({0},{1})", id, 8);
                         ViewContext.Writer.Write("<form class='form-horizontal'>" + Html.AntiForgeryToken() + "<a target='_blank' alt='Print delivery note' title='Print delivery note' class='btn fa fa-print' href='/Reports/DeliveryNotePrint/" + id + "' role='button'></a></form>");
@@ -134,17 +134,18 @@
 
                     if (WMS.Helpers.LayoutHelpers.ActivityValidator("Pallets", "MarkedOrderProcessAsDispatch"))
                     {
-                        if (OrderProcessStatusId != (int)OrderProcessStatusEnum.Dispatched &&(OrderProcessStatusId != (int)OrderProcessStatusEnum.PostedToAccounts && OrderProcessStatusId != (int)OrderProcessStatusEnum.Delivered && OrderProcessStatusId != (int)OrderProcessStatusEnum.Invoiced))
+                        if (orderProcessStatusId != OrderProcessStatusEnum.Dispatched && (orderProcessStatusId != OrderProcessStatusEnum.PostedToAccounts && orderProcessStatusId != OrderProcessStatusEnum.Delivered
+                        && orderProcessStatusId != OrderProcessStatusEnum.Invoiced))
                         {
-                            var OrderProcessID = (int)DataBinder.Eval(m.DataItem, "OrderProcessID");
-                            var functon = string.Format("MarkedOrderProcessAsDispatch({0})", OrderProcessID);
+                            var orderProcessID = (int)DataBinder.Eval(m.DataItem, "OrderProcessID");
+                            var functon = string.Format("MarkedOrderProcessAsDispatch({0})", orderProcessID);
                             ViewContext.Writer.Write("<a target='javascript:;' alt='Mark order as dispatched' title='Mark order as dispatched' class='btn fa fa-check' onclick=" + functon + " role='button'></a>");
                         }
                     }
                     if (WMS.Helpers.LayoutHelpers.ActivityValidator("SalesOrders", "EditDeliveryAddress"))
                     {
                         var functon = string.Format("EditDeliveryAddress({0},{1})", id, "true");
-                        ViewContext.Writer.Write("<a target='javascript:;' alt='Edit delivery' title='Edit delivery' class='btn fa fa-pencil' onclick="+functon+" role='button'></a>");
+                        ViewContext.Writer.Write("<a target='javascript:;' alt='Edit delivery' title='Edit delivery' class='btn fa fa-pencil' onclick=" + functon + " role='button'></a>");
                     }
                 }
 
@@ -160,7 +161,7 @@
                 var orderId = (int)DataBinder.Eval(m.DataItem, "OrderID");
                 var emailcount = (int?)DataBinder.Eval(m.DataItem, "EmailCount");
 
-                var functon = string.Format("showEmails({0},{1})", orderId,4);
+                var functon = string.Format("showEmails({0},{1})", orderId, 4);
                 if (emailcount.HasValue && emailcount > 0)
                 {
                     ViewContext.Writer.Write("<a target='javascript:;' alt='Show Emails' class='fa fa-send-o' onclick=" + functon + ">     <b>" + emailcount + "</b></a>");
@@ -184,7 +185,7 @@
                 });
                 s.TabPages.Add("Dispatches").SetContent(() =>
                 {
-                    Html.RenderAction("_PalletsDispatch","Pallets", new { ProcessId = DataBinder.Eval(c.DataItem, "OrderProcessID") });
+                    Html.RenderAction("_PalletsDispatch", "Pallets", new { ProcessId = DataBinder.Eval(c.DataItem, "OrderProcessID") });
                 });
                 s.TabPages.Add("Address Details").SetContent(() =>
                 {
