--- a/WMS/Views/Theme/Default/Terminals/Details.cshtml
+++ b/WMS/Views/Theme/Default/Terminals/Details.cshtml
@@ -20,7 +20,7 @@
 
 <div class="col-md-12">
     <h2><span>Terminal Details</span></h2>
-    <div class ="col-md-4 pl-0 pull-left">
+    <div class="col-md-4 pl-0 pull-left">
         <h2><span>Details</span></h2>
         <dl class="dl-horizontal">
             <dt>
@@ -91,7 +91,7 @@
 
 
     <div class="col-md-8 p-0 pull-left">
-        <h2><span>Sync Log</span></h2>
+        <h2><span>Sync Log</span><a href="#" class="fa fa-refresh text-decoration-none" onclick="javascript:TLog.Refresh();"></a></h2>
         @Html.Action("_TermianlLog", new { id = Model.TerminalId })
     </div>
 </div>
@@ -102,4 +102,3 @@
         <div class="back-list">@Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })</div>
     </div>
 </div>
-
