added website small logo upload + some style fixes and code cleaning. added show more/less toggle to products description part

--- a/WMS/Views/Theme/Default/TenantWebsites/Delete.cshtml
+++ b/WMS/Views/Theme/Default/TenantWebsites/Delete.cshtml
@@ -59,6 +59,22 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.SmallLogo)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SmallLogo)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Favicon)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Favicon)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.FacebookUrl)
         </dt>
 
