--- a/WMS/Views/Theme/Default/TenantWebsites/Create.cshtml
+++ b/WMS/Views/Theme/Default/TenantWebsites/Create.cshtml
@@ -202,6 +202,13 @@
             </div>
 
             <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.Label("SmallLogo", new { @class = "col-md-4" })
+                <div class="col-md-8">
+                    @Html.Action("_FileUploader", new { name = "SmallLogo" })
+                </div>
+            </div>
+
+            <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.Label("Favicon", new { @class = "col-md-4" })
                 <div class="col-md-8">
                     @Html.Action("_FileUploader", new { name = "Favicon" })
